// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Navigation Component navigation sidebar for: Integration 1`] = `
<DocumentFragment>
  <div
    aria-hidden="false"
    class="pf-v5-c-page__sidebar pf-m-expanded"
    id="vertical-sidebar"
  >
    <div
      class="pf-v5-c-page__sidebar-body"
    >
      <nav
        aria-label="Default global nav"
        class="pf-v5-c-nav"
        data-ouia-component-id="OUIA-Generated-Nav-5"
        data-ouia-component-type="PF5/Nav"
        data-ouia-safe="true"
      >
        <ul
          class="pf-v5-c-nav__list"
          role="list"
        >
          <li
            class="pf-v5-c-nav__item pf-m-expandable pf-m-expanded pf-m-current"
            data-ouia-component-id="OUIA-Generated-NavExpandable-5"
            data-ouia-component-type="PF5/NavExpandable"
            data-ouia-safe="true"
            data-testid="Visualization"
          >
            <button
              aria-expanded="true"
              class="pf-v5-c-nav__link"
              id="Visualization"
            >
              Visualization
              <span
                class="pf-v5-c-nav__toggle"
              >
                <span
                  class="pf-v5-c-nav__toggle-icon"
                >
                  <svg
                    aria-hidden="true"
                    class="pf-v5-svg"
                    fill="currentColor"
                    height="1em"
                    role="img"
                    viewBox="0 0 256 512"
                    width="1em"
                  >
                    <path
                      d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
                    />
                  </svg>
                </span>
              </span>
            </button>
            <section
              aria-labelledby="Visualization"
              class="pf-v5-c-nav__subnav"
            >
              <ul
                class="pf-v5-c-nav__list"
                role="list"
              >
                <li
                  class="pf-v5-c-nav__item"
                  data-ouia-component-id="OUIA-Generated-NavItem-29"
                  data-ouia-component-type="PF5/NavItem"
                  data-ouia-safe="true"
                >
                  <a
                    aria-current="page"
                    class="pf-v5-c-nav__link pf-m-current"
                    data-testid="Design"
                    href="/"
                  >
                    Design
                  </a>
                </li>
                <li
                  class="pf-v5-c-nav__item"
                  data-ouia-component-id="OUIA-Generated-NavItem-30"
                  data-ouia-component-type="PF5/NavItem"
                  data-ouia-safe="true"
                >
                  <a
                    class="pf-v5-c-nav__link"
                    data-testid="Source Code"
                    href="/code"
                  >
                    Source Code
                  </a>
                </li>
              </ul>
            </section>
          </li>
          <li
            class="pf-v5-c-nav__item pf-v5-u-hidden"
            data-ouia-component-id="OUIA-Generated-NavItem-31"
            data-ouia-component-type="PF5/NavItem"
            data-ouia-safe="true"
          >
            <a
              class="pf-v5-c-nav__link"
              data-testid="Beans"
              href="/beans"
            >
              Beans
            </a>
          </li>
          <li
            class="pf-v5-c-nav__item"
            data-ouia-component-id="OUIA-Generated-NavItem-32"
            data-ouia-component-type="PF5/NavItem"
            data-ouia-safe="true"
          >
            <a
              class="pf-v5-c-nav__link"
              data-testid="Metadata"
              href="/metadata"
            >
              Metadata
            </a>
          </li>
          <li
            class="pf-v5-c-nav__item pf-v5-u-hidden"
            data-ouia-component-id="OUIA-Generated-NavItem-33"
            data-ouia-component-type="PF5/NavItem"
            data-ouia-safe="true"
          >
            <a
              class="pf-v5-c-nav__link"
              data-testid="Pipe ErrorHandler"
              href="/pipe-error-handler"
            >
              Pipe ErrorHandler
            </a>
          </li>
          <li
            class="pf-v5-c-nav__item pf-v5-u-hidden"
            data-ouia-component-id="OUIA-Generated-NavItem-34"
            data-ouia-component-type="PF5/NavItem"
            data-ouia-safe="true"
          >
            <a
              class="pf-v5-c-nav__link"
              data-testid="DataMapper"
              href="/datamapper"
            >
              DataMapper
            </a>
          </li>
          <li
            class="pf-v5-c-nav__item"
            data-ouia-component-id="OUIA-Generated-NavItem-35"
            data-ouia-component-type="PF5/NavItem"
            data-ouia-safe="true"
          >
            <a
              class="pf-v5-c-nav__link"
              data-testid="Catalog"
              href="/catalog"
            >
              Catalog
            </a>
          </li>
        </ul>
      </nav>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Navigation Component navigation sidebar for: Kamelet 1`] = `
<DocumentFragment>
  <div
    aria-hidden="false"
    class="pf-v5-c-page__sidebar pf-m-expanded"
    id="vertical-sidebar"
  >
    <div
      class="pf-v5-c-page__sidebar-body"
    >
      <nav
        aria-label="Default global nav"
        class="pf-v5-c-nav"
        data-ouia-component-id="OUIA-Generated-Nav-2"
        data-ouia-component-type="PF5/Nav"
        data-ouia-safe="true"
      >
        <ul
          class="pf-v5-c-nav__list"
          role="list"
        >
          <li
            class="pf-v5-c-nav__item pf-m-expandable pf-m-expanded pf-m-current"
            data-ouia-component-id="OUIA-Generated-NavExpandable-2"
            data-ouia-component-type="PF5/NavExpandable"
            data-ouia-safe="true"
            data-testid="Visualization"
          >
            <button
              aria-expanded="true"
              class="pf-v5-c-nav__link"
              id="Visualization"
            >
              Visualization
              <span
                class="pf-v5-c-nav__toggle"
              >
                <span
                  class="pf-v5-c-nav__toggle-icon"
                >
                  <svg
                    aria-hidden="true"
                    class="pf-v5-svg"
                    fill="currentColor"
                    height="1em"
                    role="img"
                    viewBox="0 0 256 512"
                    width="1em"
                  >
                    <path
                      d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
                    />
                  </svg>
                </span>
              </span>
            </button>
            <section
              aria-labelledby="Visualization"
              class="pf-v5-c-nav__subnav"
            >
              <ul
                class="pf-v5-c-nav__list"
                role="list"
              >
                <li
                  class="pf-v5-c-nav__item"
                  data-ouia-component-id="OUIA-Generated-NavItem-8"
                  data-ouia-component-type="PF5/NavItem"
                  data-ouia-safe="true"
                >
                  <a
                    aria-current="page"
                    class="pf-v5-c-nav__link pf-m-current"
                    data-testid="Design"
                    href="/"
                  >
                    Design
                  </a>
                </li>
                <li
                  class="pf-v5-c-nav__item"
                  data-ouia-component-id="OUIA-Generated-NavItem-9"
                  data-ouia-component-type="PF5/NavItem"
                  data-ouia-safe="true"
                >
                  <a
                    class="pf-v5-c-nav__link"
                    data-testid="Source Code"
                    href="/code"
                  >
                    Source Code
                  </a>
                </li>
              </ul>
            </section>
          </li>
          <li
            class="pf-v5-c-nav__item"
            data-ouia-component-id="OUIA-Generated-NavItem-10"
            data-ouia-component-type="PF5/NavItem"
            data-ouia-safe="true"
          >
            <a
              class="pf-v5-c-nav__link"
              data-testid="Beans"
              href="/beans"
            >
              Beans
            </a>
          </li>
          <li
            class="pf-v5-c-nav__item"
            data-ouia-component-id="OUIA-Generated-NavItem-11"
            data-ouia-component-type="PF5/NavItem"
            data-ouia-safe="true"
          >
            <a
              class="pf-v5-c-nav__link"
              data-testid="Metadata"
              href="/metadata"
            >
              Metadata
            </a>
          </li>
          <li
            class="pf-v5-c-nav__item pf-v5-u-hidden"
            data-ouia-component-id="OUIA-Generated-NavItem-12"
            data-ouia-component-type="PF5/NavItem"
            data-ouia-safe="true"
          >
            <a
              class="pf-v5-c-nav__link"
              data-testid="Pipe ErrorHandler"
              href="/pipe-error-handler"
            >
              Pipe ErrorHandler
            </a>
          </li>
          <li
            class="pf-v5-c-nav__item"
            data-ouia-component-id="OUIA-Generated-NavItem-13"
            data-ouia-component-type="PF5/NavItem"
            data-ouia-safe="true"
          >
            <a
              class="pf-v5-c-nav__link"
              data-testid="DataMapper"
              href="/datamapper"
            >
              DataMapper
            </a>
          </li>
          <li
            class="pf-v5-c-nav__item"
            data-ouia-component-id="OUIA-Generated-NavItem-14"
            data-ouia-component-type="PF5/NavItem"
            data-ouia-safe="true"
          >
            <a
              class="pf-v5-c-nav__link"
              data-testid="Catalog"
              href="/catalog"
            >
              Catalog
            </a>
          </li>
        </ul>
      </nav>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Navigation Component navigation sidebar for: KameletBinding 1`] = `
<DocumentFragment>
  <div
    aria-hidden="false"
    class="pf-v5-c-page__sidebar pf-m-expanded"
    id="vertical-sidebar"
  >
    <div
      class="pf-v5-c-page__sidebar-body"
    >
      <nav
        aria-label="Default global nav"
        class="pf-v5-c-nav"
        data-ouia-component-id="OUIA-Generated-Nav-4"
        data-ouia-component-type="PF5/Nav"
        data-ouia-safe="true"
      >
        <ul
          class="pf-v5-c-nav__list"
          role="list"
        >
          <li
            class="pf-v5-c-nav__item pf-m-expandable pf-m-expanded pf-m-current"
            data-ouia-component-id="OUIA-Generated-NavExpandable-4"
            data-ouia-component-type="PF5/NavExpandable"
            data-ouia-safe="true"
            data-testid="Visualization"
          >
            <button
              aria-expanded="true"
              class="pf-v5-c-nav__link"
              id="Visualization"
            >
              Visualization
              <span
                class="pf-v5-c-nav__toggle"
              >
                <span
                  class="pf-v5-c-nav__toggle-icon"
                >
                  <svg
                    aria-hidden="true"
                    class="pf-v5-svg"
                    fill="currentColor"
                    height="1em"
                    role="img"
                    viewBox="0 0 256 512"
                    width="1em"
                  >
                    <path
                      d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
                    />
                  </svg>
                </span>
              </span>
            </button>
            <section
              aria-labelledby="Visualization"
              class="pf-v5-c-nav__subnav"
            >
              <ul
                class="pf-v5-c-nav__list"
                role="list"
              >
                <li
                  class="pf-v5-c-nav__item"
                  data-ouia-component-id="OUIA-Generated-NavItem-22"
                  data-ouia-component-type="PF5/NavItem"
                  data-ouia-safe="true"
                >
                  <a
                    aria-current="page"
                    class="pf-v5-c-nav__link pf-m-current"
                    data-testid="Design"
                    href="/"
                  >
                    Design
                  </a>
                </li>
                <li
                  class="pf-v5-c-nav__item"
                  data-ouia-component-id="OUIA-Generated-NavItem-23"
                  data-ouia-component-type="PF5/NavItem"
                  data-ouia-safe="true"
                >
                  <a
                    class="pf-v5-c-nav__link"
                    data-testid="Source Code"
                    href="/code"
                  >
                    Source Code
                  </a>
                </li>
              </ul>
            </section>
          </li>
          <li
            class="pf-v5-c-nav__item pf-v5-u-hidden"
            data-ouia-component-id="OUIA-Generated-NavItem-24"
            data-ouia-component-type="PF5/NavItem"
            data-ouia-safe="true"
          >
            <a
              class="pf-v5-c-nav__link"
              data-testid="Beans"
              href="/beans"
            >
              Beans
            </a>
          </li>
          <li
            class="pf-v5-c-nav__item"
            data-ouia-component-id="OUIA-Generated-NavItem-25"
            data-ouia-component-type="PF5/NavItem"
            data-ouia-safe="true"
          >
            <a
              class="pf-v5-c-nav__link"
              data-testid="Metadata"
              href="/metadata"
            >
              Metadata
            </a>
          </li>
          <li
            class="pf-v5-c-nav__item"
            data-ouia-component-id="OUIA-Generated-NavItem-26"
            data-ouia-component-type="PF5/NavItem"
            data-ouia-safe="true"
          >
            <a
              class="pf-v5-c-nav__link"
              data-testid="Pipe ErrorHandler"
              href="/pipe-error-handler"
            >
              Pipe ErrorHandler
            </a>
          </li>
          <li
            class="pf-v5-c-nav__item pf-v5-u-hidden"
            data-ouia-component-id="OUIA-Generated-NavItem-27"
            data-ouia-component-type="PF5/NavItem"
            data-ouia-safe="true"
          >
            <a
              class="pf-v5-c-nav__link"
              data-testid="DataMapper"
              href="/datamapper"
            >
              DataMapper
            </a>
          </li>
          <li
            class="pf-v5-c-nav__item"
            data-ouia-component-id="OUIA-Generated-NavItem-28"
            data-ouia-component-type="PF5/NavItem"
            data-ouia-safe="true"
          >
            <a
              class="pf-v5-c-nav__link"
              data-testid="Catalog"
              href="/catalog"
            >
              Catalog
            </a>
          </li>
        </ul>
      </nav>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Navigation Component navigation sidebar for: Pipe 1`] = `
<DocumentFragment>
  <div
    aria-hidden="false"
    class="pf-v5-c-page__sidebar pf-m-expanded"
    id="vertical-sidebar"
  >
    <div
      class="pf-v5-c-page__sidebar-body"
    >
      <nav
        aria-label="Default global nav"
        class="pf-v5-c-nav"
        data-ouia-component-id="OUIA-Generated-Nav-3"
        data-ouia-component-type="PF5/Nav"
        data-ouia-safe="true"
      >
        <ul
          class="pf-v5-c-nav__list"
          role="list"
        >
          <li
            class="pf-v5-c-nav__item pf-m-expandable pf-m-expanded pf-m-current"
            data-ouia-component-id="OUIA-Generated-NavExpandable-3"
            data-ouia-component-type="PF5/NavExpandable"
            data-ouia-safe="true"
            data-testid="Visualization"
          >
            <button
              aria-expanded="true"
              class="pf-v5-c-nav__link"
              id="Visualization"
            >
              Visualization
              <span
                class="pf-v5-c-nav__toggle"
              >
                <span
                  class="pf-v5-c-nav__toggle-icon"
                >
                  <svg
                    aria-hidden="true"
                    class="pf-v5-svg"
                    fill="currentColor"
                    height="1em"
                    role="img"
                    viewBox="0 0 256 512"
                    width="1em"
                  >
                    <path
                      d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
                    />
                  </svg>
                </span>
              </span>
            </button>
            <section
              aria-labelledby="Visualization"
              class="pf-v5-c-nav__subnav"
            >
              <ul
                class="pf-v5-c-nav__list"
                role="list"
              >
                <li
                  class="pf-v5-c-nav__item"
                  data-ouia-component-id="OUIA-Generated-NavItem-15"
                  data-ouia-component-type="PF5/NavItem"
                  data-ouia-safe="true"
                >
                  <a
                    aria-current="page"
                    class="pf-v5-c-nav__link pf-m-current"
                    data-testid="Design"
                    href="/"
                  >
                    Design
                  </a>
                </li>
                <li
                  class="pf-v5-c-nav__item"
                  data-ouia-component-id="OUIA-Generated-NavItem-16"
                  data-ouia-component-type="PF5/NavItem"
                  data-ouia-safe="true"
                >
                  <a
                    class="pf-v5-c-nav__link"
                    data-testid="Source Code"
                    href="/code"
                  >
                    Source Code
                  </a>
                </li>
              </ul>
            </section>
          </li>
          <li
            class="pf-v5-c-nav__item pf-v5-u-hidden"
            data-ouia-component-id="OUIA-Generated-NavItem-17"
            data-ouia-component-type="PF5/NavItem"
            data-ouia-safe="true"
          >
            <a
              class="pf-v5-c-nav__link"
              data-testid="Beans"
              href="/beans"
            >
              Beans
            </a>
          </li>
          <li
            class="pf-v5-c-nav__item"
            data-ouia-component-id="OUIA-Generated-NavItem-18"
            data-ouia-component-type="PF5/NavItem"
            data-ouia-safe="true"
          >
            <a
              class="pf-v5-c-nav__link"
              data-testid="Metadata"
              href="/metadata"
            >
              Metadata
            </a>
          </li>
          <li
            class="pf-v5-c-nav__item"
            data-ouia-component-id="OUIA-Generated-NavItem-19"
            data-ouia-component-type="PF5/NavItem"
            data-ouia-safe="true"
          >
            <a
              class="pf-v5-c-nav__link"
              data-testid="Pipe ErrorHandler"
              href="/pipe-error-handler"
            >
              Pipe ErrorHandler
            </a>
          </li>
          <li
            class="pf-v5-c-nav__item pf-v5-u-hidden"
            data-ouia-component-id="OUIA-Generated-NavItem-20"
            data-ouia-component-type="PF5/NavItem"
            data-ouia-safe="true"
          >
            <a
              class="pf-v5-c-nav__link"
              data-testid="DataMapper"
              href="/datamapper"
            >
              DataMapper
            </a>
          </li>
          <li
            class="pf-v5-c-nav__item"
            data-ouia-component-id="OUIA-Generated-NavItem-21"
            data-ouia-component-type="PF5/NavItem"
            data-ouia-safe="true"
          >
            <a
              class="pf-v5-c-nav__link"
              data-testid="Catalog"
              href="/catalog"
            >
              Catalog
            </a>
          </li>
        </ul>
      </nav>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Navigation Component navigation sidebar for: Route 1`] = `
<DocumentFragment>
  <div
    aria-hidden="false"
    class="pf-v5-c-page__sidebar pf-m-expanded"
    id="vertical-sidebar"
  >
    <div
      class="pf-v5-c-page__sidebar-body"
    >
      <nav
        aria-label="Default global nav"
        class="pf-v5-c-nav"
        data-ouia-component-id="OUIA-Generated-Nav-1"
        data-ouia-component-type="PF5/Nav"
        data-ouia-safe="true"
      >
        <ul
          class="pf-v5-c-nav__list"
          role="list"
        >
          <li
            class="pf-v5-c-nav__item pf-m-expandable pf-m-expanded pf-m-current"
            data-ouia-component-id="OUIA-Generated-NavExpandable-1"
            data-ouia-component-type="PF5/NavExpandable"
            data-ouia-safe="true"
            data-testid="Visualization"
          >
            <button
              aria-expanded="true"
              class="pf-v5-c-nav__link"
              id="Visualization"
            >
              Visualization
              <span
                class="pf-v5-c-nav__toggle"
              >
                <span
                  class="pf-v5-c-nav__toggle-icon"
                >
                  <svg
                    aria-hidden="true"
                    class="pf-v5-svg"
                    fill="currentColor"
                    height="1em"
                    role="img"
                    viewBox="0 0 256 512"
                    width="1em"
                  >
                    <path
                      d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
                    />
                  </svg>
                </span>
              </span>
            </button>
            <section
              aria-labelledby="Visualization"
              class="pf-v5-c-nav__subnav"
            >
              <ul
                class="pf-v5-c-nav__list"
                role="list"
              >
                <li
                  class="pf-v5-c-nav__item"
                  data-ouia-component-id="OUIA-Generated-NavItem-1"
                  data-ouia-component-type="PF5/NavItem"
                  data-ouia-safe="true"
                >
                  <a
                    aria-current="page"
                    class="pf-v5-c-nav__link pf-m-current"
                    data-testid="Design"
                    href="/"
                  >
                    Design
                  </a>
                </li>
                <li
                  class="pf-v5-c-nav__item"
                  data-ouia-component-id="OUIA-Generated-NavItem-2"
                  data-ouia-component-type="PF5/NavItem"
                  data-ouia-safe="true"
                >
                  <a
                    class="pf-v5-c-nav__link"
                    data-testid="Source Code"
                    href="/code"
                  >
                    Source Code
                  </a>
                </li>
              </ul>
            </section>
          </li>
          <li
            class="pf-v5-c-nav__item"
            data-ouia-component-id="OUIA-Generated-NavItem-3"
            data-ouia-component-type="PF5/NavItem"
            data-ouia-safe="true"
          >
            <a
              class="pf-v5-c-nav__link"
              data-testid="Beans"
              href="/beans"
            >
              Beans
            </a>
          </li>
          <li
            class="pf-v5-c-nav__item pf-v5-u-hidden"
            data-ouia-component-id="OUIA-Generated-NavItem-4"
            data-ouia-component-type="PF5/NavItem"
            data-ouia-safe="true"
          >
            <a
              class="pf-v5-c-nav__link"
              data-testid="Metadata"
              href="/metadata"
            >
              Metadata
            </a>
          </li>
          <li
            class="pf-v5-c-nav__item pf-v5-u-hidden"
            data-ouia-component-id="OUIA-Generated-NavItem-5"
            data-ouia-component-type="PF5/NavItem"
            data-ouia-safe="true"
          >
            <a
              class="pf-v5-c-nav__link"
              data-testid="Pipe ErrorHandler"
              href="/pipe-error-handler"
            >
              Pipe ErrorHandler
            </a>
          </li>
          <li
            class="pf-v5-c-nav__item"
            data-ouia-component-id="OUIA-Generated-NavItem-6"
            data-ouia-component-type="PF5/NavItem"
            data-ouia-safe="true"
          >
            <a
              class="pf-v5-c-nav__link"
              data-testid="DataMapper"
              href="/datamapper"
            >
              DataMapper
            </a>
          </li>
          <li
            class="pf-v5-c-nav__item"
            data-ouia-component-id="OUIA-Generated-NavItem-7"
            data-ouia-component-type="PF5/NavItem"
            data-ouia-safe="true"
          >
            <a
              class="pf-v5-c-nav__link"
              data-testid="Catalog"
              href="/catalog"
            >
              Catalog
            </a>
          </li>
        </ul>
      </nav>
    </div>
  </div>
</DocumentFragment>
`;
